fixed overflow issue

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -594,6 +594,12 @@ p {
   .create-form{
     min-height: 40vh;
     background:rebeccapurple;
+    .create-inputmid{
+      width:50vw;
+      height:5vh;
+      overflow: none;
+      overflow-y:hidden
+    }
   }
 
 @maincolor : #EBE1CE;
